--- a/src/index.html
+++ b/src/index.html
@@ -90,8 +90,8 @@
         <footer class="footer">
             <p class="footer__info">© 2020 Supersite, Powered by News API</p>
             <div class="footer__nav">
-                <p class="footer__nav-button">Главная</p>
-                <p class="footer__nav-button">Яндекс.практикум</p>
+                <a class="footer__nav-button" href="">Главная</a>
+                <a class="footer__nav-button" href="">Яндекс.практикум</a>
                 <img src="../src/images/GitHub.jpg" alt="Github" class="footer__social-icon">
                 <img src="../src/images/Facebook.jpg" alt="Facebook" class="footer__social-icon">
             </div>
