--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -31,7 +31,7 @@
                 </div>
             </section>
             <section class="news news_empty_hidden">
-                <img src="/src/images/not-found_v1.svg" alt="Не найдено" class="news__not-found-picture">
+                <img src="../src/images/not-found_v1.svg" alt="Не найдено" class="news__not-found-picture">
                 <h2 class="news__not-found-title">Ничего не найдено</h2>
                 <p class="news__not-found-subtitle">К сожалению по вашему запросу 
                     ничего не найдено.</p>
