--- a/src/pages/articles.html
+++ b/src/pages/articles.html
@@ -10,5 +10,8 @@
     <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.css %>">
     <title>NewsExplorer</title>
 </head>
+<body>
+    <h1>afadf</h1>
+</body>
 <script src="<%= htmlWebpackPlugin.files.js %>"></script>
 </html>
