--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -31,7 +31,7 @@
                 </div>
             </section>
             <section class="news news_empty_hidden">
-                <img src="../src/images/not-found_v1.svg" alt="Не найдено" class="news__not-found-picture">
+                <img src="<%=require('../images/not-found_v1.svg')%>" alt="Не найдено" class="news__not-found-picture">
                 <h2 class="news__not-found-title">Ничего не найдено</h2>
                 <p class="news__not-found-subtitle">К сожалению по вашему запросу 
                     ничего не найдено.</p>
@@ -40,45 +40,45 @@
                 <h2 class="news__title">Результаты поиска</h2>
                 <div class="news__card-place">
                     <div class="news__card">
-                        <img src="../src/images/card-icon-example.jpg" alt="Национальное достояние – парки" class="news__card-icon">
+                        <img src="<%=require('../images/card-icon-example.jpg')%>" alt="Национальное достояние – парки" class="news__card-icon">
                         <p class="news__date">2 августа, 2019</p>
                         <h3 class="news__card-title">Национальное достояние – парки</h3>
                         <p class="news__card-subtitle">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала складываться система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
                         <a href="https://lenta.ru/" class="news__source">Лента.ру</a>
                     </div>
                     <div class="news__card">
-                        <img src="../src/images/card-icon-example.jpg" alt="Национальное достояние – парки" class="news__card-icon">
+                        <img src="<%=require('../images/card-icon-example.jpg')%>" alt="Национальное достояние – парки" class="news__card-icon">
                         <p class="news__date">2 августа, 2019</p>
                         <h3 class="news__card-title">Национальное достояние – парки</h3>
                         <p class="news__card-subtitle">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала складываться система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
                         <a href="https://lenta.ru/" class="news__source">Лента.ру</a>
                     </div>
                     <div class="news__card">
-                        <img src="../src/images/card-icon-example.jpg" alt="Национальное достояние – парки" class="news__card-icon">
+                        <img src="<%=require('../images/card-icon-example.jpg')%>" alt="Национальное достояние – парки" class="news__card-icon">
                         <p class="news__date">2 августа, 2019</p>
                         <h3 class="news__card-title">Национальное достояние – парки</h3>
                         <p class="news__card-subtitle">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала складываться система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
                         <a href="https://lenta.ru/" class="news__source">Лента.ру</a>
                     </div>
                     <div class="news__card">
-                        <img src="../src/images/card-icon-example.jpg" alt="Национальное достояние – парки" class="news__card-icon">
+                        <img src="<%=require('../images/card-icon-example.jpg')%>" alt="Национальное достояние – парки" class="news__card-icon">
                         <p class="news__date">2 августа, 2019</p>
                         <h3 class="news__card-title">Национальное достояние – парки</h3>
                         <p class="news__card-subtitle">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала складываться система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
                         <a href="https://lenta.ru/" class="news__source">Лента.ру</a>
                     </div>
                     <div class="news__card">
-                        <img src="../src/images/card-icon-example.jpg" alt="Национальное достояние – парки" class="news__card-icon">
+                        <img src="<%=require('../images/card-icon-example.jpg')%>" alt="Национальное достояние – парки" class="news__card-icon">
                         <p class="news__date">2 августа, 2019</p>
                         <h3 class="news__card-title">Национальное достояние – парки</h3>
                         <p class="news__card-subtitle">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала складываться система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
                         <a href="https://lenta.ru/" class="news__source">Лента.ру</a>
-                    </div>
+                    </div>                    
                 </div>
                 <button class="button news__button">Показать еще</button>
             </section>
             <section class="about-author">
-                <div class="about-author_avatar"></div>
+                <img src="<%=require('../images/author-avatar.png')%>" alt="Андрей Корляков" class="about-author_avatar">
                 <div class="about-author__text-block">
                     <h2 class="about-author__title">Об авторе</h2>
                     <p class="about-author__subtitle">Это блок с описанием автора проекта. Здесь следует указать, как вас зовут, чем вы занимаетесь, какими технологиями разработки владеете.
