--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Поиск новостей">
     <meta name="keywords" content="Поиск, Новости, Читать, Новости этой недели, Что нового, Мир">
     <meta name="author" content="Andrew Korlyakov">
-    <link rel="icon" href="../src/images/favicon.svg" type="image/x-icon">
+    <link rel="icon" href="<%=require('../images/favicon.svg')%>" type="image/x-icon">
     <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.css %>">
     <title>NewsExplorer</title>
 </head>
@@ -41,49 +41,49 @@
                 <div class="news__card-place">
                     <div class="news__card">
                         <img src="<%=require('../images/card-icon-example.jpg')%>" alt="Национальное достояние – парки" class="news__card-icon">
+                        <div class="news__flag"></div>
                         <p class="news__date">2 августа, 2019</p>
                         <h3 class="news__card-title">Национальное достояние – парки</h3>
                         <p class="news__card-subtitle">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала складываться система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
                         <a href="https://lenta.ru/" class="news__source">Лента.ру</a>
-                    </div>
+                    </div>  
                     <div class="news__card">
                         <img src="<%=require('../images/card-icon-example.jpg')%>" alt="Национальное достояние – парки" class="news__card-icon">
+                        <div class="news__flag"></div>
                         <p class="news__date">2 августа, 2019</p>
                         <h3 class="news__card-title">Национальное достояние – парки</h3>
                         <p class="news__card-subtitle">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала складываться система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
                         <a href="https://lenta.ru/" class="news__source">Лента.ру</a>
-                    </div>
+                    </div> 
                     <div class="news__card">
                         <img src="<%=require('../images/card-icon-example.jpg')%>" alt="Национальное достояние – парки" class="news__card-icon">
+                        <div class="news__flag"></div>
                         <p class="news__date">2 августа, 2019</p>
                         <h3 class="news__card-title">Национальное достояние – парки</h3>
                         <p class="news__card-subtitle">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала складываться система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
                         <a href="https://lenta.ru/" class="news__source">Лента.ру</a>
-                    </div>
+                    </div> 
                     <div class="news__card">
                         <img src="<%=require('../images/card-icon-example.jpg')%>" alt="Национальное достояние – парки" class="news__card-icon">
+                        <div class="news__flag news__flag_active"></div>
                         <p class="news__date">2 августа, 2019</p>
                         <h3 class="news__card-title">Национальное достояние – парки</h3>
                         <p class="news__card-subtitle">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала складываться система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
                         <a href="https://lenta.ru/" class="news__source">Лента.ру</a>
-                    </div>
-                    <div class="news__card">
-                        <img src="<%=require('../images/card-icon-example.jpg')%>" alt="Национальное достояние – парки" class="news__card-icon">
-                        <p class="news__date">2 августа, 2019</p>
-                        <h3 class="news__card-title">Национальное достояние – парки</h3>
-                        <p class="news__card-subtitle">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала складываться система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
-                        <a href="https://lenta.ru/" class="news__source">Лента.ру</a>
-                    </div>                    
+                    </div>                 
                 </div>
                 <button class="button news__button">Показать еще</button>
             </section>
             <section class="about-author">
-                <img src="<%=require('../images/author-avatar.png')%>" alt="Андрей Корляков" class="about-author_avatar">
+                <picture srcset="<%=require('../images/author-avatar.png')%>" type="image/webp">
+                    <img src="<%=require('../images/author-avatar.png')%>" alt="Андрей Корляков" class="about-author_avatar">
+                </picture>
                 <div class="about-author__text-block">
                     <h2 class="about-author__title">Об авторе</h2>
-                    <p class="about-author__subtitle">Это блок с описанием автора проекта. Здесь следует указать, как вас зовут, чем вы занимаетесь, какими технологиями разработки владеете.
-                        Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь потенциальным заказчикам.</p>
-                    <p class="about-author__subtitle">В практикуме.</p>
+                    <p class="about-author__subtitle">Меня зовут Андрей Корляков. Я начинающий веб-разработчик. Учусь на 3 курсе университета на теплоэнергетика. Тем не менее хочу поменять профессию и связать жизнь с разработкой, ведь это не только перспективно, но и по-настоящему интересно. </p>
+                    <p class="about-author__subtitle">Закончил курсы Яндекс.Практикума по профессии Веб-разработчик. Освоил освновы JavaScript, научился верстать, владею адаптивной версткой. Умею писать современный и аккуратный код (ES6+, ООП, AJAX). Работал с системой контроля версий git и командной строкой, работал с Webpack`ом. Имею учебный опыт работы с noSQL БД (mongoose). Делал бэкенд на Express.js+Node.js. Ну и конечно же на курсах Яндекс.Практикум я научился работать в команде.
+                        Каждый проект прошел код-ревью у опытных менторов – это ценный опыт, который поможет избежать многих ошибок. Мои работы можно посмотреть здесь - github.com/yletfull/portfolio.
+                    </p>
                 </div>
             </section>
         </main>
@@ -96,8 +96,10 @@
                 <img src="../src/images/Facebook.jpg" alt="Facebook" class="footer__social-icon">
             </div>
         </footer>
+        <div class="preloader_hidden">
+            <i class="preloader__circle_hidden"></i>
+        </div>
     </div>
-    
 </body>
 <script src="<%= htmlWebpackPlugin.files.js %>"></script>
 </html>
