feature { header, articles-info - articles }

--- a/src/pages/articles.html
+++ b/src/pages/articles.html
@@ -20,15 +20,10 @@
             </nav>
         </header>
         <main class="main"></main>
-            <section class="search">
-                <div class="search__block">
-                    <h1 class="search__title">Что в мире творится?</h1>
-                    <p class="search__subtitle">Находите самые свежие статьи на любую тему и сохраняйте в своём личном кабинете.</p>
-                    <form class="search__form" name="news-search-form">
-                        <input type="text" class="input search__input" placeholder="Введите тему новости">
-                        <input type="button" value="Искать" class="button search__button">
-                    </form>
-                </div>
+            <section class="articles-info">
+                <h3 class="articles-info__title">Сохранённые статьи</h3>
+                <p class="articles-info__subtitle">Грета, у вас 5 сохранённых статей</p>
+                <p class="articles-info__keywords">По ключевым словам: <b>Природа</b>, <b>Тайга</b> и <b>2 другим</b></p>
             </section>
             <section class="news news_empty_hidden">
                 <img src="<%=require('../images/not-found_v1.svg')%>" alt="Не найдено" class="news__not-found-picture">
