--- a/src/pages/articles.html
+++ b/src/pages/articles.html
@@ -15,7 +15,7 @@
         <header class="header">
             <h1 class="header__logo-text">NewsExplorer</h1>
             <nav class="header__navigation">
-                <a href="#" class="header__nav-button">Главная</a>
+                <a href="./index.html" class="header__nav-button">Главная</a>
                 <a href="./" class="header__nav-button header__nav-button_current">Сохранённые статьи</a>
                 <a href="./" class="header__nav-button header__nav-button_rectangle">Андрей&nbsp;<img src="<%=require('../images/logout.svg')%>" alt="Выйти" class="header__logout"></a>
             </nav>
@@ -38,7 +38,37 @@
                         <img src="<%=require('../images/card-icon-example.jpg')%>" alt="Национальное достояние – парки" class="news__card-icon">
                         <div class="news__delete-button"></div>
                         <div class="news__tags-place">Природа</div>
-                        <div class="news__help">Удалить из сохранённых</div>
+                        <div class="news__help_show">Убрать из сохранённых</div>
+                        <p class="news__date">2 августа, 2019</p>
+                        <h3 class="news__card-title">Национальное достояние – парки</h3>
+                        <p class="news__card-subtitle">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала складываться система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
+                        <a href="https://lenta.ru/" class="news__source">Лента.ру</a>
+                    </div> 
+                    <div class="news__card">
+                        <img src="<%=require('../images/card-icon-example.jpg')%>" alt="Национальное достояние – парки" class="news__card-icon">
+                        <div class="news__delete-button"></div>
+                        <div class="news__tags-place">Природа</div>
+                        <div class="news__help_show">Убрать из сохранённых</div>
+                        <p class="news__date">2 августа, 2019</p>
+                        <h3 class="news__card-title">Национальное достояние – парки</h3>
+                        <p class="news__card-subtitle">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала складываться система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
+                        <a href="https://lenta.ru/" class="news__source">Лента.ру</a>
+                    </div> 
+                    <div class="news__card">
+                        <img src="<%=require('../images/card-icon-example.jpg')%>" alt="Национальное достояние – парки" class="news__card-icon">
+                        <div class="news__delete-button"></div>
+                        <div class="news__tags-place">Природа</div>
+                        <div class="news__help_show">Убрать из сохранённых</div>
+                        <p class="news__date">2 августа, 2019</p>
+                        <h3 class="news__card-title">Национальное достояние – парки</h3>
+                        <p class="news__card-subtitle">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала складываться система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
+                        <a href="https://lenta.ru/" class="news__source">Лента.ру</a>
+                    </div> 
+                    <div class="news__card">
+                        <img src="<%=require('../images/card-icon-example.jpg')%>" alt="Национальное достояние – парки" class="news__card-icon">
+                        <div class="news__delete-button"></div>
+                        <div class="news__tags-place">Природа</div>
+                        <div class="news__help">Убрать из сохранённых</div>
                         <p class="news__date">2 августа, 2019</p>
                         <h3 class="news__card-title">Национальное достояние – парки</h3>
                         <p class="news__card-subtitle">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала складываться система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
@@ -64,8 +94,8 @@
             <p class="footer__info">© 2020 Supersite, Powered by News API</p>
             <div class="footer__nav">
                 <div class="footer__links">
-                    <a class="footer__nav-button" href="">Главная</a>
-                    <a class="footer__nav-button" href="">Яндекс.практикум</a>
+                    <a class="footer__nav-button" href="./index.html">Главная</a>
+                    <a class="footer__nav-button" href="https://praktikum.yandex.ru">Яндекс.практикум</a>
                 </div>
                 <div class="footer__icons">
                     <a href="https://github.com/yletfull" class="footer__social-icon"><img src="<%=require('../images/GitHub.jpg')%>" alt="Github"></a>
@@ -73,7 +103,7 @@
                 </div>
             </div>
         </footer>
-        
+
         <div class="popup_hidden popup_login">
             <div class="popup__content">
                 <h2 class="popup__title">Вход</h2>
@@ -103,6 +133,18 @@
                 </form>
                 <p class="popup__alter-action">или <a href="#">Войти</a></p>
             </div>
+        </div>
+        <div class="mobile-menu mobile-menu_hidden">
+            <div class="mobile-menu_border">
+                <h1 class="mobile-menu_logo-text header__logo-text">NewsExplorer</h1>
+                <img src="<%=require('../images/close.svg')%>" alt="Закрыть" class="mobile-menu__close">
+            </div>
+            <nav class="mobile-menu__navigation">
+                <a href="./index.html" class="header__nav-button mobile-menu__nav-button">Главная</a>
+                <a href="./articles.html" class="header__nav-button mobile-menu__nav-button">Сохранённые статьи</a>
+                <a href="./" class="header__nav-button mobile-menu__nav-button  mobile-menu__nav-button_rectangle">Андрей</a>
+            </nav>
+            <div class="mobile-menu__background"></div>
         </div>
         <div class="preloader_hidden">
             <i class="preloader__circle_hidden"></i>
