--- a/src/pages/articles.html
+++ b/src/pages/articles.html
@@ -78,9 +78,7 @@
                 <button class="button news__button">Показать еще</button>
             </section>
             <section class="about-author">
-                <picture srcset="<%=require('../images/author-avatar.png')%>" type="image/webp">
-                    <img src="<%=require('../images/author-avatar.png')%>" alt="Андрей Корляков" class="about-author_avatar">
-                </picture>
+                <img src="<%=require('../images/author-avatar.png')%>" alt="Андрей Корляков" class="about-author_avatar">
                 <div class="about-author__text-block">
                     <h2 class="about-author__title">Об авторе</h2>
                     <p class="about-author__subtitle">Меня зовут Андрей Корляков. Я начинающий веб-разработчик. Учусь на 3 курсе университета на теплоэнергетика. Тем не менее хочу поменять профессию и связать жизнь с разработкой, ведь это не только перспективно, но и по-настоящему интересно. </p>
@@ -104,7 +102,7 @@
             </div>
         </footer>
 
-        <div class="popup_hidden popup_login">
+        <div class="popup popup_hidden popup_login">
             <div class="popup__content">
                 <h2 class="popup__title">Вход</h2>
                 <img src="<%=require('../images/close.svg')%>" alt="Закрыть" class="popup__close">
@@ -115,10 +113,10 @@
                     <input class="input popup__input" type="password" placeholder="Введите пароль">
                     <button class="button popup__button">Войти</button>
                 </form>
-                <p class="popup__alter-action">или <a href="#">Зарегистрироваться</a></p>
+                <p class="popup__alter-action">или <a class="popup__alter-action_link" href="#">Зарегистрироваться</a></p>
             </div>
         </div>
-        <div class="popup_hidden popup_registration">
+        <div class="popup popup_hidden popup_registration">
             <div class="popup__content">
                 <h2 class="popup__title">Регистрация</h2>
                 <img src="<%=require('../images/close.svg')%>" alt="Закрыть" class="popup__close">
@@ -131,7 +129,7 @@
                     <input class="input popup__input" type="text" placeholder="Введите своё имя">
                     <button class="button popup__button">Зарегистрироваться</button>
                 </form>
-                <p class="popup__alter-action">или <a href="#">Войти</a></p>
+                <p class="popup__alter-action">или <a class="popup__alter-action_link" href="#">Войти</a></p>
             </div>
         </div>
         <div class="mobile-menu mobile-menu_hidden">
@@ -150,6 +148,6 @@
             <i class="preloader__circle_hidden"></i>
         </div>
     </div>
+    <script src="<%= htmlWebpackPlugin.files.js %>"></script>
 </body>
-<script src="<%= htmlWebpackPlugin.files.js %>"></script>
 </html>
