--- a/src/pages/articles.html
+++ b/src/pages/articles.html
@@ -35,7 +35,7 @@
                     ничего не найдено.</p>
             </section>
             <section class="news">
-                <div class="news__card-place">
+                <!-- <div class="news__card-place">
                     <div class="news__card">
                         <img src="<%=require('../images/card-icon-example.jpg')%>" alt="Национальное достояние – парки" class="news__card-icon">
                         <div class="news__delete-button"></div>
@@ -76,7 +76,7 @@
                         <p class="news__card-subtitle">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала складываться система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
                         <a href="https://lenta.ru/" class="news__source">Лента.ру</a>
                     </div>               
-                </div>
+                </div> -->
                 <button class="button news__button">Показать еще</button>
             </section>
             <section class="about-author">
