--- a/src/pages/articles.html
+++ b/src/pages/articles.html
@@ -14,7 +14,7 @@
     <div class="root">
         <header class="header">
             <h1 class="header__logo-text">NewsExplorer</h1>
-            <nav class="header__navigation" id="menu-open-button-mobile">
+            <nav class="header__navigation header__navigation_articles" id="menu-open-button-mobile">
                 <a href="./index.html" class="header__nav-button">Главная</a>
                 <a href="./articles.html" class="header__nav-button header__nav-button_current header__nav-button_saved-articles">Сохранённые статьи</a>
                 <a href="#" class="header__nav-button header__nav-button_rectangle" id="popup-open-button" data-popup="popup_login">Авторизоваться
